some finessing touches: FIX: -cards were slightly misaligned by justify styling, nuked it -mobile couldn't open edit profile, suspect is padding on avatar icon button, played with sizing for smaller screens

--- a/src/blocks/cards.css
+++ b/src/blocks/cards.css
@@ -113,7 +113,6 @@
         grid-template-columns: 100%;
         grid-template-rows: repeat(6, 1fr);
         grid-auto-flow: column;
-        justify-content: center;
         align-items: center;
         padding-left: 0;
         padding-right: 0;
