--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -167,7 +167,6 @@
         margin-right: 0;
         margin-bottom: 0;
         margin-left: 0;
-        /*white-space-collapse: collapse;*//*suto checker doesn't like this i guess*/
         min-width: 0;
         padding-left: 15px;
         padding-top: 2px;
@@ -217,6 +216,13 @@
         height: 16px;
         padding-left: 2px;
         padding-bottom: 2px;
+    }
+
+    .profile__avatar-button-icon {
+        left: 20%;
+        top: 0;
+        padding: 20%;
+
     }
 
 }
